--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "testing and practice for Pariss :)",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "build": "webpack -p --progress --env production",
+    "start": "webpack-dev-server --env development"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,37 @@
     "url": "https://github.com/ndejesus1227/testingstuff/issues"
   },
   "homepage": "https://github.com/ndejesus1227/testingstuff#readme",
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "webpack": "2.2.1"
+  },
   "devDependencies": {
-    "webpack": "^2.3.3"
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.27.3",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "image-webpack-loader": "^3.3.0",
+    "node-sass": "^4.5.1",
+    "redux-logger": "^2.8.2",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.0",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-merge": "2.6.1"
   }
 }
